--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ VUE_APP_CLIENT_ID = '9c560b07a5f94d3daff526f073d035db'
 VUE_APP_CLIENT_SECRET= '23633135889b40358e35518ca07809a0'
 
 VUE_APP_ACCOUNTS_SPOTIFY_URl = 'https://accounts.spotify.com'
-VUE_APP_API_SPOTIFY_URl = 'https://api.spotify.com/v1/me'
+VUE_APP_API_SPOTIFY_URl = 'https://api.spotify.com/v1'
