--- a/package.json
+++ b/package.json
@@ -1,78 +1,72 @@
 {
-  "name": "player",
+  "name": "projectplayerfordecathlon",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "dev-build": "vue-cli-service build --mode development",
-    "format": "prettier-eslint src/**/*.js src/**/*.vue tests/**/*.js --write",
-    "staging-build": "vue-cli-service build --mode staging",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ag-grid-community": "20.1.0",
-    "ag-grid-enterprise": "20.1.0",
-    "ag-grid-vue": "20.1.0",
     "axios": "^0.18.0",
-    "chart.js": "^2.7.2",
-    "chartjs-plugin-datalabels": "^0.4.0",
+    "core-js": "^3.6.4",
     "fine-mq": "^1.1.0",
-    "hammerjs": "^2.0.8",
-    "just-compare": "^1.3.0",
-    "leaflet": "^1.3.4",
-    "lodash": "^4.17.11",
-    "luxon": "^1.8.2",
-    "modularscale-sass": "^3.0.8",
-    "register-service-worker": "^1.0.0",
-    "v-modal-backdrop": "^1.0.3",
-    "v-tooltip": "2.0.0-rc.33",
-    "vue": "^2.6.6",
-    "vue-analytics": "^5.16.0",
-    "vue-chartjs": "^3.4.0",
-    "vue-content-loader": "^0.2.1",
-    "vue-gtm": "^2.0.0",
+    "vue": "^2.6.11",
+    "vue-burger-menu": "^2.0.5",
     "vue-i18n": "^8.8.2",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-plugin-unit-jest": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "@vue/test-utils": "^1.0.0-beta.26",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.0.1",
-    "eslint": "^5.8.0",
-    "eslint-config-kentcdodds": "^14.0.4",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-jest": "^21.24.1",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "lint-staged": "^7.2.2",
-    "node-sass": "^4.9.0",
-    "prettier-eslint-cli": "^4.7.1",
-    "sass-loader": "^7.0.1",
-    "style-resources-loader": "^1.2.1",
-    "vue-cli-plugin-i18n": "^0.5.1",
-    "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-property-decorator": "^7.3.0",
-    "vue-template-compiler": "^2.6.6"
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-router": "~4.3.0",
+    "@vue/cli-plugin-unit-jest": "~4.3.0",
+    "@vue/cli-plugin-vuex": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "1.0.0-beta.31",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "prettier": "^1.19.1",
+    "vue-template-compiler": "^2.6.11",
+    "sass-loader": "^7.0.1"
   },
-  "gitHooks": {
-  },
-  "lint-staged": {
-    "*.js": [
-      "vue-cli-service lint",
-      "git add"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "@vue/prettier"
     ],
-    "*.vue": [
-      "vue-cli-service lint",
-      "git add"
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {},
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
     ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "jest": {
+    "preset": "@vue/cli-plugin-unit-jest"
   }
 }
