WIP implement playback spotify store + css style

--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ VUE_APP_CLIENT_SECRET= '23633135889b40358e35518ca07809a0'
 
 VUE_APP_ACCOUNTS_SPOTIFY_URl = 'https://accounts.spotify.com'
 VUE_APP_API_SPOTIFY_URl = 'https://api.spotify.com/v1'
+
+VUE_APP_SDK_KEY= 'BQCyFcR9Zodh95CTyNjiprNDoWOCJIE-TUlEChjbmTdwUqqqP37_9iIeVXUH02Gq3xvhGCsNZxF0E1xyYovpRo_0b-HPzuE-vLe5XDBk2_0QFQL5i8fv6B3A9L-5NErJDxef5jQQbXWJJHvnHbpm1IYvhred2dMSDmxX4tIhoMF9ZJide92Av-U'
+
+VUE_APP_API_DEEZER = 'https://connect.deezer.com/oauth/auth.php'
